<resources>
    <string name="app_name">WeatherTestApp</string>
    <string name="action_settings">Settings</string>
    <string name="common_no_network_dialog_title">No Internet connection.</string>
    <string name="common_no_network_dialog_msg">You have no internet connection</string>
    <string name="common_ok_dialog_button">Ok</string>
    <string name="common_cancel_dialog_button">Cancel</string>
    <string name="common_settings_dialog_button">Settings</string>
    <string name="weather_list_row_item_real_feel_label">Real Feel: %d\u00B0 C</string>
    <string name="weather_list_row_last_update_label">Last update:\n%s</string>
    <string name="weather_list_row_item_current_day_today_label">Today\n%s</string>
    <string name="weather_details_temperature_header_label">Temperature</string>
    <string name="weather_details_wind_header_label">Wind</string>
    <string name="weather_details_other_header_label">Other</string>

    <string name="weather_details_max_temp_label">Max temp:</string>
    <string name="weather_details_temp_value">%d\u00B0 C</string>
    <string name="weather_details_min_temp_label">Min temp:</string>
    <string name="weather_details_real_feel_temp_label">Real Feel:</string>
    <string name="weather_details_wind_speed_label">Speed:</string>
    <string name="weather_details_speed_value">%d kmh</string>
    <string name="weather_details_wind_direction_label">Direction:</string>
    <string name="weather_details_text_value">%s</string>
    <string name="weather_details_humidity_label">Humidity:</string>
    <string name="weather_details_percent_value">%d %%</string>
    <string name="weather_details_pressure_label">Pressure:</string>
    <string name="weather_details_pressure_value">%d Pa</string>
    <string name="weather_details_chance_of_rain_label">Chance of rain:</string>
    <string name="weather_details_today_label">Today</string>
    <string name="fragment_progress_loading_weather_label">Loading weather...</string>
    <string name="weather_cannot_featch_from_server_label">Cannot fetch weather.\nTAP to try again.</string>
    <string name="action_change_location">Change location</string>
    <string name="weather_location_dialog_title">Change location</string>
    <string name="weather_location_dialog_search_hint">Enter city name, postal code or coordinates</string>
    <string name="weather_location_dialog_location_name_to_short">Given location is to short or doesn\'t exists</string>

</resources>
