<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/content_container"
        android:visibility="gone"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_alignParentTop="true"
                android:id="@+id/weather_details_main_info_layout"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        style="@style/BlackTextView"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/weather_details_today"
                        android:text="@string/weather_details_today_label"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        style="@style/BlackTextView"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/weather_details_day_of_week"
                        android:textStyle="bold"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        style="@style/BlackTextView"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/weather_details_date"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/weather_details_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BlackTextView"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/weather_details_description" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_below="@+id/weather_details_main_info_layout"
                android:layout_height="wrap_content"
                android:id="@+id/weather_details_temperature_header"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/weather_details_temperature_header_label"
                style="?android:attr/listSeparatorTextViewStyle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather_details_max_temp_label"
                style="@style/BlackTextView"
                android:layout_below="@+id/weather_details_temperature_header"
                android:layout_toLeftOf="@+id/weather_details_max_temp_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/weather_details_max_temp_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                style="@style/BlackTextView"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/weather_details_temperature_header"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/weather_details_max_temp_value" />

            <TextView
                android:layout_width="match_parent"
                android:layout_toLeftOf="@+id/weather_details_min_temp_value"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weather_details_max_temp_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/weather_details_min_temp_label"
                style="@style/BlackTextView"
                android:id="@+id/weather_details_min_temp_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weather_details_max_temp_label"
                android:layout_alignParentRight="true"
                style="@style/BlackTextView"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:id="@+id/weather_details_min_temp_value" />

            <TextView
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="wrap_content"
                style="@style/BlackTextView"
                android:layout_toLeftOf="@+id/weather_details_real_feel_temp_value"
                android:layout_below="@+id/weather_details_min_temp_label"
                android:text="@string/weather_details_real_feel_temp_label"
                android:id="@+id/weather_details_real_feel_temp_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                style="@style/BlackTextView"
                android:layout_below="@+id/weather_details_min_temp_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/weather_details_real_feel_temp_value" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/weather_details_wind_header"
                android:layout_below="@+id/weather_details_real_feel_temp_label"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/weather_details_wind_header_label"
                style="?android:attr/listSeparatorTextViewStyle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/weather_details_wind_speed_value"
                android:layout_below="@+id/weather_details_wind_header"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/weather_details_wind_speed_label"
                style="@style/BlackTextView"
                android:id="@+id/weather_details_wind_speed_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                style="@style/BlackTextView"
                android:layout_below="@+id/weather_details_wind_header"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/weather_details_wind_speed_value" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/weather_details_wind_direction_value"
                android:layout_below="@+id/weather_details_wind_speed_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/weather_details_wind_direction_label"
                style="@style/BlackTextView"
                android:id="@+id/weather_details_wind_direction_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_below="@+id/weather_details_wind_speed_label"
                android:layout_alignParentRight="true"
                style="@style/BlackTextView"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/weather_details_wind_direction_value" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weather_details_other_header"
                android:layout_below="@+id/weather_details_wind_direction_value"
                android:text="@string/weather_details_other_header_label"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="?android:attr/listSeparatorTextViewStyle" />

            <TextView
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/weather_details_chance_of_rain_label"
                style="@style/BlackTextView"
                android:layout_below="@+id/weather_details_other_header"
                android:layout_toLeftOf="@+id/weather_details_rain_chance_value"
                android:id="@+id/weather_details_rain_chance_label" />

            <TextView
                android:layout_width="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                style="@style/BlackTextView"
                android:layout_below="@+id/weather_details_other_header"
                android:layout_alignParentRight="true"
                android:id="@+id/weather_details_rain_chance_value" />

            <TextView
                android:layout_width="match_parent"
                android:layout_below="@+id/weather_details_rain_chance_label"
                android:layout_height="wrap_content"
                android:text="@string/weather_details_pressure_label"
                style="@style/BlackTextView"
                android:layout_toLeftOf="@+id/weather_details_pressure_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/weather_details_pressure_label" />

            <TextView
                style="@style/BlackTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:layout_below="@+id/weather_details_rain_chance_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/weather_details_pressure_value" />

            <TextView
                android:layout_width="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/weather_details_humidity_label"
                style="@style/BlackTextView"
                android:layout_below="@+id/weather_details_pressure_label"
                android:layout_toLeftOf="@+id/weather_details_humidity_value"
                android:id="@+id/weather_details_humidity_label" />

            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                style="@style/BlackTextView"
                android:layout_below="@+id/weather_details_pressure_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/weather_details_humidity_value" />


        </RelativeLayout>
    </ScrollView>

    <include
        layout="@layout/fragment_progress_layout"
        android:id="@+id/progress_view" />
</FrameLayout>